Adds timer and support for mint button.

--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "classnames": "^2.3.1",
     "ethers": "^5.5.1",
     "keccak256": "^1.0.3",
+    "luxon": "^2.3.0",
     "merkletreejs": "^0.2.24",
+    "pluralize": "^8.0.0",
     "react": "^16.13.1",
+    "react-countdown": "^2.3.2",
     "react-dom": "^16.13.1",
     "react-inlinesvg": "^2.3.0",
     "react-scripts": "^4.0.3",
